--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint", 
+    "lint": "next lint",
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
     "next": "12.1.0",
     "next-sanity": "^0.5.1",
+    "next-sanity-image": "^3.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
